--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -16,7 +16,9 @@
 </head>
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
+    <search></search>
     <div id="main" ui-view></div>
+    <br />
     <footer></footer>
 </body>
 </html>
