Completed basic styling of a single product.

--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -19,7 +19,7 @@ body {
   width: 1200px;
   margin: 0 auto;
 }
-
+@import url(https://fonts.googleapis.com/css?family=Satisfy);
 @import 'directives/main';
 @import 'home/main';
 @import 'about/main';
