Working on side panel menus for app.

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -17,6 +17,7 @@
 <body ng-app="FullstackGeneratedApp">
     <navbar></navbar>
     <search></search>
+    <category-selector id="category-selector" class="side-panel"></category-selector>
     <div id="main" ui-view></div>
     <br />
     <footer></footer>
