--- a/browser/scss/directives/category-selector-and-search.scss
+++ b/browser/scss/directives/category-selector-and-search.scss
@@ -1,7 +1,3 @@
-#main {
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
 @mixin side-panel-tab {
   writing-mode: vertical-lr;
   -webkit-writing-mode: vertical-lr;
@@ -16,6 +12,7 @@
   height: 150px;
   font-family: satisfy;
   font-size: 1.8em;
+  text-align: center;
 }
 
 .side-panel {
@@ -31,6 +28,24 @@
   -webkit-transition: transform 0.5s ease-in-out;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.55);
 
+  .side-panel-internal {
+    padding: 10px;
+    header {
+      font-family: satisfy, cursive;
+      padding: 5px;
+      color: white
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0px;
+
+      li {
+        margin: 5px auto;
+      }
+    }
+  }
+
 }
 
 #category-selector:after {
@@ -39,6 +54,16 @@
   @include side-panel-tab;
 }
 
+#search-panel {
+  top: 251px;
+}
+
+#search-panel:after {
+  color: salmon;
+  background-color: #541954;
+  content: "Search";
+  @include side-panel-tab;
+}
 
 .side-panel:hover {
   transform: translate(350px);
