--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -1,12 +1,61 @@
+@mixin background-image-orientation {
+  background-repeat: no-repeat;
+  background-origin: center;
+  background-position: center;
+  background-size: cover;
+}
+
+@mixin button-transition {
+  transition: all 0.25s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+}
+
+$dark-shadow: 0px 5px 10px rgba(0,0,0,0.95);
+
+$shadow: 0px 5px 10px rgba(0, 0, 0, 0.55);
+
 #home {
-  fullstack-logo {
-    padding-top: 30px;
-    width: 150px;
-    margin: 0 auto;
+  position: fixed;
+  top: 100px;
+  left:0px;
+  width: 100vw;
+  height: 100vh;
+
+  .full-screen {
+    width: 100%;
+    height: 100%;
   }
-  h1 {
-    margin-top: 40px;
-    text-align: center;
+
+  .home-carousel-image {
+    width: 100%;
+    height: 90vh;
+    @include background-image-orientation;
+
+    h1 {
+      font-family: satisfy, cursive;
+      font-size: 4.5em;
+      padding: 250px;
+      color: white;
+      text-shadow: 0px 5px 10px rgba(0,0,0,0.95);
+      margin: 0px;
+
+      a {
+        text-decoration: none;
+        color: salmon;
+        cursor: pointer;
+        @include button-transition;
+      }
+
+      a:hover {
+        color: #57ECF5;
+        text-shadow: 0px 5px 10px #541954; 
+      }
+
+      a:active {
+        text-shadow: none;
+      }
+    }
   }
+
 }
 
