--- a/browser/scss/product/main.scss
+++ b/browser/scss/product/main.scss
@@ -196,7 +196,7 @@ $inset-input-shadow: 0px 0px 10px rbga(0, 0, 0, 0.65) inset;
           margin: 10px;
         }
 
-        float: left;
+        display: inline-block;
         border-radius: 10px;
         box-shadow: $shadow;
         width: 45%;
