--- a/browser/scss/product/main.scss
+++ b/browser/scss/product/main.scss
@@ -197,6 +197,7 @@ $inset-input-shadow: 0px 0px 10px rbga(0, 0, 0, 0.65) inset;
         }
 
         display: inline-block;
+        vertical-align: top;
         border-radius: 10px;
         box-shadow: $shadow;
         width: 45%;
