Finished functionality for adding billing and shipping details.

--- a/browser/scss/categories/main.scss
+++ b/browser/scss/categories/main.scss
@@ -51,6 +51,7 @@ input[type='text'] {
   outline: none;
   border: 1px solid white;  
   background-color: black;
+  color: white;
 }
 
 input[type='text']:focus {
