--- a/browser/scss/checkout/main.scss
+++ b/browser/scss/checkout/main.scss
@@ -1,16 +1,56 @@
-#checkout {
+
+.checkout-panel {
   background-color: white;
+  display: inline-block;
   color: black;
-  width: 75%;
-  height: 700px;
+  height: auto;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 0px 5px 10px black;
 
-  .checkout-panel {
-    position: inline-block;
+}
+
+.checkout-field-label {
+  color: #541954; 
+}
+
+.user-checkout-options {
+  margin: 5px auto;
+  text-align: center;
+
+  .user-address {
+    display: inline-block;
     width: 30%;
-
-    .checkoutField {
-      color: white;
-    }
+    height: auto;
+    vertical-align: top;
+    margin: 5px;
+    text-align: left;
+    box-shadow: $shadow;
+    border-radius: 5px;
+    padding: 15px;
   }
 
+  
+}
+
+
+
+#checkout-options {
+  width: 60%;
+
+
+  #checkout-shipping {
+
+  }
+
+  #checkout-billing {
+
+  }
+
+}
+
+#checkout-summary {
+  width: 30%;
+  vertical-align: top;
+  margin: 20px 0px 0px 30px;
 }
