--- a/browser/scss/login/main.scss
+++ b/browser/scss/login/main.scss
@@ -7,3 +7,12 @@
   width: 60%;
   margin: 0 auto;
 }
+
+.login {
+	text-align: center;
+	color: white;
+}
+
+.oauth-holder {
+	text-align: center;
+}
