--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -30,3 +30,5 @@ body {
 @import 'categories/main';
 @import 'product/main';
 @import 'checkout/main';
+@import 'order/order';
+@import 'wishlist/main';
