--- a/browser/scss/product/main.scss
+++ b/browser/scss/product/main.scss
@@ -184,6 +184,7 @@ $inset-input-shadow: 0px 0px 10px rbga(0, 0, 0, 0.65) inset;
       font-size: 1.5em;
       text-align: left;
       padding: 20px;
+      vertical-align: top;
     }
 
     select.wishlist {
