--- a/browser/scss/checkout/main.scss
+++ b/browser/scss/checkout/main.scss
@@ -11,7 +11,7 @@
 }
 
 .checkout-field-label {
-  color: #541954; 
+  color: #541954;
 }
 
 .user-checkout-options {
@@ -30,10 +30,8 @@
     padding: 15px;
   }
 
-  
+
 }
-
-
 
 #checkout-options {
   width: 60%;
@@ -53,4 +51,16 @@
   width: 30%;
   vertical-align: top;
   margin: 20px 0px 0px 30px;
+}
+
+.checkout-heading{
+   border-bottom: 3px solid grey;
+   padding: 10px;
+}
+
+input[type='text']{
+   background-color: grey;
+}
+.ship{
+  color:#541954
 }
