--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -1,30 +1,36 @@
 navbar {
 
   display: block;
-  background: white;
+  background: black;
   border-bottom: 1px solid black;
   box-shadow: 1px 1px 14px -3px black;
 
   #nav {
-    background: white;
+    background: black;
+    color: white;
   }
 
   .container {
     width: 91%;
     max-width: 1340px;
     padding-top: 20px;
-  }
 
-  fullstack-logo {
-    margin-top: 5px;
-    margin-right: 20px;
-    width: 40px;
+    .navbar-header {
+      text-align: top;
+      margin-right: 20px;
+      h1 {
+        font-family: satisfy;
+
+      }
+    }
+
   }
 
   a {
-    color: black;
+    color: white;
+    font-family: satisfy;
     font-size: 16px;
-    border: 1px solid black;
+    border: 1px solid salmon;
     padding: 5px;
     border-radius: 10px;
     margin: 5px;
@@ -32,14 +38,14 @@ navbar {
 
   .nav > li > a {
     cursor: pointer;
-    transition: color 0.2s;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
     &.active {
-      color: darken(#f31214, 10%);
+      color: white;
     }
     &:hover {
-      background: black;
-      color: white;
-      color: #f31214;
+      background: salmon;
+      color: black;
       text-decoration: none;
     }
     &:focus {
@@ -50,29 +56,43 @@ navbar {
 
   .login-button {
     float: right;
-    border: 1px solid black;
+    border: 1px solid salmon;
     margin-top: 10px;
     background: none;
+    padding: 10px;
     outline: none !important;
+    font-family: satisfy;
+    font-size: 1.2em;
+    transition: all 0.25s;
+    -webkit-transition: all 0.25s;
+    &:hover {
+      color: black;
+      background-color: salmon;
+    }
   }
 
   .welcome {
     float: right;
     margin-top: 12px;
-    span {
-      color: white;
+
+    .nav-btn {
+      font-family: satisfy;
       font-size: 16px;
       margin-right: 5px;
-    }
-    a {
-      color: black;
+      padding: 10px;
+      transition: all 0.25s;
+      -webkit-transition: all 0.25s;
+      color: white;
       cursor: pointer;
-    }
-    a:hover {
-      color:red;
-      background: black;
-      text-decoration: none;
+      padding: 10px;
+      border: 1px solid salmon;
+      background-color: black;
+      border-radius: 10px;
+      &:hover {
+        color:black;
+        background: salmon;
+      }
     }
   }
-
 }
+
