--- a/browser/scss/wishlist/main.scss
+++ b/browser/scss/wishlist/main.scss
@@ -2,20 +2,40 @@
 	text-align: center;
 	color: white;
 	font-size: 3em;
+	font-family: satisfy;
 }
 
 .a-wishlist {
 	text-align: center;
-	color: red;
+	color: white;
 	font-size: 1em;
 }
 
 .link {
 	text-align: center;
-	color: white;
+	color: black;
 	font-size: 2em;
+	background-color: white;
 }
 
 .center {
 	text-align: center;
+}
+
+.box {
+	background-color: white;
+	margin: 0 auto;
+	width: 50%;
+	padding: 10px;
+	border-radius: 5px;
+
+	h4 {
+	font-size: 1.5em;
+	}
+}
+
+.kid {
+	height: 50%;
+	width: 50%;
+	padding-left: 80px;
 }
