some style stuff

--- a/browser/scss/checkout/main.scss
+++ b/browser/scss/checkout/main.scss
@@ -64,3 +64,10 @@ input[type='text']{
 .ship{
   color:#541954
 }
+.item-pic img {
+  height: 100%;
+  width: 100%;
+}
+.checkout-list {
+  list-style: none;
+}
