Finished fixing stuff.

--- a/browser/scss/confirmation/confirmation.scss
+++ b/browser/scss/confirmation/confirmation.scss
@@ -2,4 +2,10 @@
 	text-align: center;
 	color: black;
 	background-color: white;
+	width: 50%;
+	margin: 10px auto;
+	padding: 30px;
+	border-radius: 10px;
+	box-shadow: $dark-shadow;
+
 }
